--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,31 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.junit</groupId>
+      <artifactId>junit5-api</artifactId>
+      <version>5.0.0-ALPHA</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+  <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.1.0</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.beryx</groupId>
